--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -45,6 +45,22 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: build & install LuaJIT ubuntu
+        run: |
+          cd LuaJIT/
+          make
+          sudo make install
+        if: ${{ startsWith(matrix.os, 'ubuntu') }}
+
+      - name: build & install LuaJIT windows
+        run: |
+          cd LuaJIT/src/
+          make
+        if: ${{ startsWith(matrix.os, 'windows') }}
+
+      - name: cd directory
+        run: cd src-cpp/
+
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
