--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,20 +22,20 @@ jobs:
             type: Release
             cxx: gcc
             coverage: -DCMAKE_CXX_FLAGS=--coverage
-          - os: ubuntu-latest
-            type: Debug
-            cxx: clang
-          - os: ubuntu-latest
-            type: Release
-            cxx: clang
-          - os: windows-latest
-            type: Debug
-          - os: windows-latest
-            type: Release
-          - os: macos-latest
-            type: Debug
-          - os: macos-latest
-            type: Release
+          # - os: ubuntu-latest
+          #   type: Debug
+          #   cxx: clang
+          # - os: ubuntu-latest
+          #   type: Release
+          #   cxx: clang
+          # - os: windows-latest
+          #   type: Debug
+          # - os: windows-latest
+          #   type: Release
+          # - os: macos-latest
+          #   type: Debug
+          # - os: macos-latest
+          #   type: Release
 
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
@@ -49,7 +49,6 @@ jobs:
         run: |
           cd LuaJIT/
           make
-          sudo make install
         if: ${{ startsWith(matrix.os, 'ubuntu') }}
 
       - name: build & install LuaJIT windows
