--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -44,6 +44,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
       - name: build & install LuaJIT ubuntu
         run: |
