--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -59,21 +59,15 @@ jobs:
           make
         if: ${{ startsWith(matrix.os, 'windows') }}
 
-      - name: cd directory
-        run: cd src-cpp/
+      - name: src-cpp config cmake and build
+        working-directory: ${{github.workspace}}/src-cpp
+        run: |
+          cmake -B ${{github.workspace}}/src-cpp/build -DCMAKE_BUILD_TYPE=${{matrix.type}}
+          cmake --build ${{github.workspace}}/src-cpp/build --config ${{matrix.type}}
 
-      - name: Configure CMake
-        # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-        # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.type}}
-
-      - name: Build
-        # Build your program with the given configuration
-        run: cmake --build ${{github.workspace}}/build --config ${{matrix.type}}
-
-      - name: Test
-        working-directory: ${{github.workspace}}/build
-        # Execute tests defined by the CMake configuration.
-        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-        run: ctest -C ${{matrix.type}}
+      # - name: Test
+      #   working-directory: ${{github.workspace}}/src-cpp/build
+      #   # Execute tests defined by the CMake configuration.
+      #   # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      #   run: ctest -C ${{matrix.type}}
 
