--- a/src-cpp/CMakeLists.txt
+++ b/src-cpp/CMakeLists.txt
@@ -10,8 +10,8 @@ ELSEIF (APPLE)
     message(STATUS "Now is Apple.")
 ELSEIF (UNIX)
     message(STATUS "Now is UNIX-like OS's.")
-    find_package(Threads REQUIRED)
-    target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
+    # find_package(Threads REQUIRED)
+    # target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
     link_libraries("${CMAKE_SOURCE_DIR}/../LuaJIT/src/lua51.so" "${CMAKE_SOURCE_DIR}/../LuaJIT/src/luajit.so")
 ELSE ()
     message(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
