--- a/src-cpp/CMakeLists.txt
+++ b/src-cpp/CMakeLists.txt
@@ -5,14 +5,14 @@ set(CMAKE_CXX_STANDARD 20)
 
 IF (WIN32)
     message(STATUS "Now is windows.")
-    link_libraries("${CMAKE_SOURCE_DIR}/../LuaJIT/src/lua51.lib" "${CMAKE_SOURCE_DIR}/../LuaJIT/src/luajit.lib")
+    link_libraries("${CMAKE_SOURCE_DIR}/../LuaJIT/src/libluajit.lib")
 ELSEIF (APPLE)
     message(STATUS "Now is Apple.")
 ELSEIF (UNIX)
     message(STATUS "Now is UNIX-like OS's.")
     # find_package(Threads REQUIRED)
     # target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
-    link_libraries("${CMAKE_SOURCE_DIR}/../LuaJIT/src/lua51.so" "${CMAKE_SOURCE_DIR}/../LuaJIT/src/luajit.so")
+    link_libraries("${CMAKE_SOURCE_DIR}/../LuaJIT/src/libluajit.so")
 ELSE ()
     message(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
 ENDIF ()
